# notebooklm-mcp

./: .containerignore  .dockerignore  .env.example  .gitignore  .mcp.json  CLAUDE.md  CLAUDE_CODE_FOCUS.md  CLAUDE_CODE_SETUP.md  COMPLETE_PROJECT_SUMMARY.md  CONTAINERIZATION_SUMMARY.md  CONTRIBUTING.md  CRC_DEPLOYMENT_NOTES.md  CRC_DEPLOYMENT_SUCCESS.md  Containerfile  FIXED_SUMMARY.md  LICENSE  MCP_SERVER_TEST_REPORT.md  MULTI_ARCH_BUILD.md  OPENSHIFT_QUICK_REFERENCE.md  OPENSHIFT_SUMMARY.md  QUICK_REFERENCE.md  README.md  README_DEPLOYMENT.md  build-multiarch.sh  docker-compose.yml  extract_with_js.py  podman-compose.yml  pyproject.toml  test_live_server.py  test_running_server.py  test_server_direct.py  values-crc.yaml
.claude/: settings.local.json
.github/: BRANCH_PROTECTION.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml  container-publish.yml  docker-publish.yml  release.yml
docs/: CLAUDE.md  CLAUDE_CODE_FOCUS.md  CLAUDE_CODE_SETUP.md  CONTRIBUTING.md  FIXED_SUMMARY.md  HTTP_TRANSPORT_GUIDE.md  MCP_SERVER_TEST_REPORT.md  OPENSHIFT_DEPLOYMENT.md  QUICK_REFERENCE.md  README_DEPLOYMENT.md  SECURITY.md
examples/: README.md  mcp-http.json  mcp-stdio.json
helm/notebooklm-mcp/: Chart.yaml  values.yaml
helm/notebooklm-mcp-openshift/: Chart.yaml  values.yaml
scripts/: setup_auth.py
scripts/tests/: test_final.py  test_list_notebooks.py  test_mcp_communication.py  test_mcp_direct.py  test_mcp_integration.py  test_mcp_server.py  test_mcp_tool_call.py
(+37 files in other folders)
